# bulletin-board

./: README.md  pyproject.toml  setup.cfg
app/: config.py  main.py
app/resources/: strings.py
app/schemas/: bulletin.py
scripts/: format  lint  test
tests/: test_base.py
