[tool.poetry]
name = "bulletin-board"
version = "0.1.0"
description = "simple api for bulletin board"
authors = ["MGorbachev <opti213@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.47.1"
uvicorn = "^0.11.2"

[tool.poetry.dev-dependencies]
mypy = "^0.761"
isort = "^4.3.21"
black = "^19.10b0"
wemake-python-styleguide = "^0.14.1"
autoflake = "^1.3.1"
pytest = "^5.3.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
